focusroom cleanup parent child renaming smooth scrolling refactor link widget refactor added question subpart model login display tweaks pip update and cleanup

--- a/core/static/css/authenticated/settings.css
+++ b/core/static/css/authenticated/settings.css
@@ -21,11 +21,11 @@
     font-size: 18px;
 }
 
-#parent_child_info_list label {
+#child_info_list label {
     margin-right: 10px;
 }
 
-#parent_child_info_list li {
+#child_info_list li {
     padding-top: 15px;
 }
 
