--- a/core/templates/authenticated/settings/childinfo.html
+++ b/core/templates/authenticated/settings/childinfo.html
@@ -1,5 +1,5 @@
-<div class='parent_child'>
+<div>
     <div><label>Name : </label> {{ child_info.name }}</div>
     <div><label>Class : </label> {{ child_info.classroom }}</div>
     <div><label>ClassTeacher : </label> {{ child_info.classteacher }}</div>
-</div> 
+</div>
