--- a/hwcentral/templates/root.html
+++ b/hwcentral/templates/root.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="{% static 'js/react.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/react-dom.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/root.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/smooth-scroll.js' %}"></script>
     {% block root_js %}{% endblock root_js %}
 
 </head>
