--- a/core/templates/authenticated/focus_id/teacher.html
+++ b/core/templates/authenticated/focus_id/teacher.html
@@ -9,7 +9,7 @@
         {% include "authenticated/charts/assignment_completion_popup.html" only %}
         {% include "authenticated/charts/student_subjectroom_performance_popup.html" only %}
     </div>
-    {% include "authenticated/reportcard/focusroom.html" with reportcard=vm.authenticated_body.reportcard only %}
+    {% include "authenticated/reportcard/room.html" with reportcard=vm.authenticated_body.reportcard target='focus' only %}
 {% endblock focusroom_body %}
 
 {% block assignments %}
