--- a/core/templates/authenticated/sidebar/listings.html
+++ b/core/templates/authenticated/sidebar/listings.html
@@ -6,9 +6,9 @@
             <h6 class="sidebarheader header">{{ listing.title }}</h6>
 		    {% for element in listing.elements %}
 		        <div class="listing_element">
-                    {% block sub_sidebar_listing_link %}
-                        <p>{% include 'authenticated/widgets/link.html' with title="Go to "|add_str:element.label urlname=listing.urlname link=element only %}</p>
-                    {% endblock sub_sidebar_listing_link %}
+                    {% block listing_link %}
+                        <p>{% include 'authenticated/widgets/link.html' with title="Go to "|add_str:element.label link=element only %}</p>
+                    {% endblock listing_link %}
                 </div>
 		    {% endfor %}
 		</div>
