--- a/core/templates/authenticated/sidebar/parent.html
+++ b/core/templates/authenticated/sidebar/parent.html
@@ -1,11 +1,11 @@
 {% extends "authenticated/sidebar/base.html" %}
 {% block sidebar_content %}
     {% for child_info, child_sidebar in sidebar.child_sidebars %}
-        <div class="parent_child_sub_sidebar">
-            <div class="parent_child_info">
-                {% include "authenticated/sidebar/parent_childinfo.html" with child_info=child_info only %}
+        <div class="child_sidebar">
+            <div class="child_info">
+                {% include "authenticated/sidebar/childinfo.html" with child_info=child_info only %}
             </div>
-            {% include "authenticated/sidebar/parent_child_sub_sidebar.html"  with sub_sidebar=child_sidebar child_id=child_info.user_id only %}
+            {% include "authenticated/sidebar/child.html"  with child_sidebar=child_sidebar child_id=child_info.user_id only %}
         </div>
     {% endfor %}
 {% endblock sidebar_content %}
