--- a/core/templates/authenticated/charts/chart_loader.html
+++ b/core/templates/authenticated/charts/chart_loader.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
-<div id="chart-loader">
-<img class='loadingimage' src="{% static 'img/page-loader.gif' %}">
-<h3 class='loadingtext'>Loading...</h3>
+
+<div class="text-center chart-loader">
+    <img src="{% static 'img/page-loader.gif' %}"/>
+    <div>Loading...</div>
 </div>
