--- a/sphinx/templates/sphinx/revision.html
+++ b/sphinx/templates/sphinx/revision.html
@@ -12,6 +12,7 @@
 
 {% block root_js %}
     {% include 'mathjax_script.html' only %}
+    <script type="text/javascript" src="{% static 'js/sphinx/utils.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/sphinx/revision.js' %}"></script>
 {% endblock root_js %}
 
