--- a/core/templates/authenticated/practice.html
+++ b/core/templates/authenticated/practice.html
@@ -4,6 +4,7 @@
 {% block title %} Create Practice Assignment {% endblock title %}
 {% block authenticated_base_js %}
     <script type="text/javascript" src="{% static "js/ajax/question_set_choice_widget.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/authenticated/practice.js" %}"></script>
 {% endblock authenticated_base_js %}
 
 {% block authenticated_base_css %}
