Index Page Changes

--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -4,7 +4,8 @@
 	<div class="navbar-header">
         <a title="Return to home page" class='indented_body_right navbar-brand'
            href="{% url 'index' %}">&copy; {% now "Y" %}
-            Homework Central</a>
+            
+Social Seva Initiatives</a>
 	</div>
 
     <ul class='navbar-right nav navbar-nav footer'>
