--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -32,8 +32,8 @@
                     <img id="hwcentrallogo" src="{% static 'img/index/Open_Shiksha.png' %}">
                 </div>
                 <div class="col-lg-9 col-md-9" id="titletagholder">
-                    <h1 id="hwcentraltitle">Open शिक्षा</h1>
-                    <h2 id="hwcentraltag">Adaptive Learning and Educational Analytics</h2>
+                    <h1 id="ostitle">Open Shiksha</h1>
+                    <h2 id="ostag">Adaptive Learning and Educational Analytics</h2>
                 </div>
             </div>
 
