--- a/hwcentral/templates/google_analytics_script.html
+++ b/hwcentral/templates/google_analytics_script.html
@@ -1,22 +1,21 @@
 <!-- Google Tag Manager -->
 
 <noscript>
-    <iframe src="//www.googletagmanager.com/ns.html?id=GTM-TJZWJQ"
-            height="0" width="0" class="hidden invisible"></iframe>
+    <iframe src="//www.googletagmanager.com/ns.html?id=GTM-PHPJD9"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
-<script>
-    (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-            'gtm.start': new Date().getTime(), event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-                '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-TJZWJQ');
+<script>(function (w, d, s, l, i) {
+    w[l] = w[l] || [];
+    w[l].push({
+        'gtm.start': new Date().getTime(), event: 'gtm.js'
+    });
+    var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async = true;
+    j.src =
+            '//www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+})(window, document, 'script', 'dataLayer', 'GTM-PHPJD9');
 </script>
 
 <!-- End Google Tag Manager -->
