--- a/challenge/templates/challenge/index.html
+++ b/challenge/templates/challenge/index.html
@@ -17,7 +17,8 @@
             Congrats! you have scripted your way through this trail!
         </div>
         <div>
-            Send your resume as well as your code to traverse this trail of links to oasis@hwcentral.in and we will get
+            Send your resume as well as your code to traverse this trail of links to oasis@openshiksha.org and we will
+            get
             back to you for an interview!
         </div>
     {% else %}
