--- a/hwcentral/templates/root.html
+++ b/hwcentral/templates/root.html
@@ -7,7 +7,7 @@
 
     <!-- Title -->
 
-    <title>HW Central - {% block title %}{% endblock title %}</title>
+    <title>OpenShiksha - {% block title %}{% endblock title %}</title>
 
     <!-- Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
