--- a/hwcentral/templates/root.html
+++ b/hwcentral/templates/root.html
@@ -15,7 +15,7 @@
 
     <!-- Favicon -->
 
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"/>
+    <link rel="shortcut icon" href="{% static 'img/faviconv2.ico' %}" type="image/x-icon"/>
 
     <!-- Styles -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css"/>
