--- a/core/templates/authenticated/base.html
+++ b/core/templates/authenticated/base.html
@@ -41,7 +41,7 @@
     <div class="hidden" id="chart_loader_holder">
         {% include "authenticated/charts/chart_loader.html" only %}
     </div>
-    {% include "authenticated/home/video_modal.html" with title="Homework Central Help Video" uri=vm.userinfo.help_uri modal_id="help_modal" only %}
+    {% include "authenticated/home/video_modal.html" with title="OpenShiksha Help Video" uri=vm.userinfo.help_uri modal_id="help_modal" only %}
 {% endblock base_body %}
 
 
