--- a/core/templates/activation/html_body.html
+++ b/core/templates/activation/html_body.html
@@ -10,7 +10,7 @@
 
 <p>For additional reference, please watch the video tutorial by clicking on the link below:</p>
 
-<a href="{{ OVERVIEW_VIDEO }}">VIDEO TUTORIAL</a>
+<a href="{{ OVERVIEW_VIDEO_URI }}">VIDEO TUTORIAL</a>
 
 <p>Feel free to reach out to us at +91 {{ CONTACT_PHONE }} or {{ CONTACT_EMAIL }} for any enquiries/feedback!</p>
 
