--- a/core/templates/activation/text_body.html
+++ b/core/templates/activation/text_body.html
@@ -8,7 +8,7 @@ Please click on the link below to activate your account and set your password:
 
 For additional reference, please watch the video tutorial by clicking on the following link:
 
-{{ OVERVIEW_VIDEO }}
+{{ OVERVIEW_VIDEO_URI }}
 
 Feel free to reach out to us at +91 {{ CONTACT_PHONE }} or {{ CONTACT_EMAIL }} for any enquiries/feedback!
 
