--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -2,9 +2,9 @@
 
 <div class="well col-md-2 hidden-sm hidden-xs" id="sidebar">
     <ul class="nav">
-        <div><a title="Return to home page" href="{% url 'index' %}"><img id="school-stamp"
-                                                                          src="{{ sidebar.school_stamp_url }}"
-                                                                          onerror="img_reload(this);"/></a></div>
+        <div><a title="{{ sidebar.school_stamp_title }}" href="{{ sidebar.school_stamp_target }}"><img id="school-stamp"
+                                                                                                       src="{{ sidebar.school_stamp_url }}"
+                                                                                                       onerror="img_reload(this);"/></a></div>
         <div id="sidebar-data">
         {% block sidebar_content %}{% endblock sidebar_content %}
         {% block sidebar_listings %}
