--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -3,6 +3,7 @@
 <div class="well col-md-2 hidden-sm hidden-xs" id="sidebar">
     <ul class="nav">
         <div><a title="{{ sidebar.school_stamp_title }}" href="{{ sidebar.school_stamp_target }}"><img id="school-stamp"
+                                                                                                       class="{{ sidebar.school_stamp_class }}"
                                                                                                        src="{{ sidebar.school_stamp_url }}"
                                                                                                        onerror="img_reload(this);"/></a></div>
         <div id="sidebar-data">
